# SOTA-Paddle-MTMC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  server.py
app/cli/: __init__.py  args.py  config.py  logging_setup.py
app/core/: runtime_mode.py
app/detection/: __init__.py  detection_union.py  pphuman_pipeline.py  sahi_detector.py  sahi_tracklet_bridge.py  sahi_worker.py
app/identity/: ambiguity.py  camera_topology.py  resolver.py  scoring.py  session.py
app/improvement/: __init__.py  dataset_manifest.py  evidence_sampler.py  offline_evaluator.py  promotion_gate.py
app/integrations/: __init__.py  legacy_contract.py  legacy_payload.py  legacy_stream.py  minio_uploader.py  mqtt_publisher.py
app/reid/: __init__.py  base.py  clipreid_adapter_optional.py  pphuman_adapter.py  transreid_adapter.py  transreid_sidecar.py
app/seed/: __init__.py  legacy.py
app/storage/: minio_store.py  postgres.py  qdrant_store.py  redis_state.py
app/streaming/: __init__.py  ffmpeg_writer.py  mediamtx_streamer.py  overlay.py
app/telemetry/: __init__.py  metrics.py  mqtt_client.py  mqtt_publisher.py  per_camera.py  thingsboard_payload.py
app/utils/: __init__.py  crop.py  frame_buffer.py  gpu.py  image_quality.py  resilient_reader.py  time.py
app/workers/: __init__.py  detection_event_consumer.py  evidence_rekey_worker.py  identity_overlay_cache.py  multi_camera_runner.py  pel_sweeper.py  pphuman_worker.py  reid_worker.py  telemetry_worker.py  tracklet_collector.py
audit/: bugs.md  database.md  improvement-loop.md  multi-camera-mtmct.md  official-compliance.md  patch-plan.md  reid-24h.md  report.md  security-privacy.md  t4-performance.md  test-quality.md
configs/: app.yaml  benchmark.yaml  benchmark_real_cam_merged.yaml  benchmark_smoke.yaml  camera_links.yaml  cameras.yaml  zones.yaml
docs/: architecture.md  benchmark-plan.md  benchmark-real.md  cam-merged-setup.md  comparison-legacy-service.md  database-design.md  docker-build.md  evidence-rekey.md  external-services.md  ground-truth-cam-merged.md  ground-truth-plan.md  improvement-loop.md  issues-closed.md  legacy-streaming-mqtt.md  mediamtx-streaming.md  minio-bucket.md  model-selection.md  mqtt-thingsboard.md  mtmct-operations.md  operator-onboarding.md  operator-runbook.md  paddle-integration.md  paddledetection-paths.md  post-revert-remediation.md  pphuman-models.md  preflight-readiness.md  reid-thresholds.md  research-sources.md  rtsp-reconnect.md  ruff-quality.md  shadow-test.md  t4-optimization.md  transreid-msmt.md  transreid-weights.md  visual-validation.md
history/: 2026-06-14-paddle-runtime-matrix.md  2026-06-14-stabilization-handoff.md  2026-06-14-unified-stream.md  2026-06-15-baseline-verification.md  2026-06-15-cam-merged-benchmark.md  2026-06-15-dataset-cam-merged.md  2026-06-15-fix-summary.md  2026-06-15-ground-truth-plan.md  2026-06-15-infra-bringup.md  2026-06-15-issue-fix-summary.md  2026-06-15-legacy-contract-alignment.md  2026-06-15-legacy-mapping.md  2026-06-15-official-integration.md  2026-06-15-operator-onboarding.md  2026-06-15-paddledetection-paths.md  2026-06-15-persistent-id-architecture.md  2026-06-15-persistent-id-transreid-sidecar.md  2026-06-15-pphuman-benchmark-baseline.md  2026-06-15-pphuman-bridge-fix.md  2026-06-15-pphuman-integration-design.md  2026-06-15-pphuman-worker-gap.md  2026-06-15-preflight-real-paths.md  2026-06-15-production-readiness.md  2026-06-15-readiness-gate.md  2026-06-15-readiness-pphuman.md  2026-06-15-readiness-real-benchmark.md  2026-06-15-real-cam-merged-benchmark.md  2026-06-15-real-visualization-3000.md  2026-06-15-reid-detector-verification.md  2026-06-15-remaining-issues-baseline.md  2026-06-15-remaining-risks.md  2026-06-15-ruff-cleanup.md  2026-06-15-short-benchmark-pphuman.md  2026-06-15-state-verification.md  2026-06-15-streaming-mqtt-minio.md  2026-06-15-streaming-visual-summary.md  2026-06-15-targeted-improvement-search-v2.md  2026-06-15-targeted-improvement-search.md  2026-06-15-test-results.md  2026-06-15-uv-workflow.md  (+5 more)
scripts/: benchmark_t4.py  compare_with_service_baseline.py  download_pphuman_models.sh  download_transreid_models.sh  fetch_torch_wheels.sh  generate_visual_validation.py  init_qdrant.py  inspect_transreid_checkpoint.py  migrate.sh  readiness_gate.py  readiness_preflight.json  readiness_preflight.py  retention_worker.py  run_local_video_test.sh  run_multi_rtsp_test.sh  run_transreid_sidecar.py
tests/: conftest.py
(+105 files in other folders)
