[project]
name = "sota-paddle-mtmct"
version = "0.1.0"
description = "Multi-camera MTMCT system on PaddleDetection PP-Human + TransReID"
readme = "README.md"
requires-python = ">=3.12,<3.14"

# Default dependencies: streaming API runtime.
#   - FastAPI, redis, qdrant, minio, MQTT, postgres client, etc.
#   - paddlepaddle-gpu — T4/CUDA inference. Only resolved when
#                         `--extra gpu` is requested for GPU checks.
#   - torch / torchvision / TransReID are NOT default deps; they
#     live only in the Dockerfile `sidecar` target. This is the
#     runtime separation the architecture needs: Paddle's PPYOLOE
#     path requires cuDNN 8.x, and torch 2.4+ transitively pulls
#     cuDNN 9.x; they cannot coexist in one API runtime venv.
dependencies = [
    # PATCH-051 fix: pin numpy to <2.0 because PaddleDetection's
    # imgaug dep still uses np.sctypes (removed in numpy 2.0).
    "numpy>=1.26,<2.0",
    # imgaug requires opencv-python; keep one cv2 provider instead of
    # installing both opencv-python and opencv-python-headless.
    "opencv-python==4.10.0.84",
    "PyYAML>=6.0",
    "pydantic>=2.7",
    # PaddlePaddle's `paddle.utils.cpp_extension` imports setuptools
    # at import time (for building custom ops). Python 3.12 ships
    # with setuptools in the stdlib, but uv's stripped venv does
    # not. Without this pin, `import paddle` fails with
    # ModuleNotFoundError: No module named 'setuptools' on
    # first use.
    "setuptools>=68",
    # PaddleDetection pipeline runtime deps (PATCH-051).
    # The official pipeline.py imports picodet_postprocess which
    # requires scipy; the paddlepaddle-gpu 2.6.x cu124 wheel does
    # not pull scipy transitively.
    "scipy>=1.11",
    # preprocess.py also imports imgaug; paddlepaddle-gpu does
    # not pull it transitively. imgaug 0.4 supports numpy>=1.26.
    "imgaug>=0.4.0",
    # PaddleDetection's MOT center_tracker imports sklearn;
    # paddlepaddle-gpu does not pull it transitively.
    "scikit-learn>=1.3",
    # PaddleDetection's MOT entrypoint imports tqdm + pandas.
    "tqdm>=4.66",
    "pandas>=2.0",
    # PaddleDetection MOT runtime deps. Keep aligned with
    # requirements.txt and Dockerfile.
    "lap==0.5.13",
    "numba==0.65.1",
    "motmetrics==1.4.0",
    # Async / I/O
    "redis>=5.0",
    # Database — psycopg >= 3.2 moved the pool to psycopg_pool.
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    # Vector store
    "qdrant-client>=1.12",
    # MinIO
    "minio>=7.2",
    # MQTT (ThingsBoard)
    "paho-mqtt>=2.1",
    # FastAPI / uvicorn
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Service-side deps
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
# Production / T4 GPU profile for the api (streaming) image.
# Adds paddlepaddle-gpu (PaddleDetection PP-Human detector+tracker,
# strongbaseline ReID).
# paddlepaddle-gpu 2.6.2 is the latest published version as of
# 2026-06-12.
#
# PADDLE_RUNTIME_FLAVOR=paddle26-cudnn8
# PaddlePaddle 2.6.2's `fused_conv2d_add_act_kernel` (used by
# PaddleDetection's PPYOLOE head) was compiled against cuDNN 8.6 +
# CUDA 11.8. The paddle wheel transitively pins
# nvidia-cudnn-cu12==9.19.0.56 which loads at runtime and aborts
# MOT init with:
#   ExternalError: CUDNN error(3000), CUDNN_STATUS_NOT_SUPPORTED.
#     at phi/kernels/fusion/gpu/fused_conv2d_add_act_kernel.cu:610
# Pin cuDNN to the last 8.x release (Dec 2023) so the runtime ABI
# matches the compiled ABI. The Dockerfile's PATCH-051 symlinks
# libcudnn.so -> libcudnn.so.8; the runtime loader picks the 8.x
# library; Paddle's MOT init completes.
gpu = [
    "paddlepaddle-gpu==2.6.2",
    "nvidia-cudnn-cu12==8.9.7.29",
]

# Dev extras for the test/lint workflow. Mirrors Service/ but
# also includes the dev profile (uv 0.5+ syntax; resolved via
# `uv sync --extra dev`).
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests that require real infra",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "app/detection/_vendor",
    "tests/integrations/_parity_assets",
]

[tool.uv]
package = false
